--- a/ArtMediaSite/src/app/login.component.html
+++ b/ArtMediaSite/src/app/login.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="content">
+  <div class="content rounded">
     <h3>Login to your account</h3>
     <form [formGroup] = "loginForm" (ngSubmit)="onSubmit()">
       <div>
