--- a/ArtMediaSite/src/app/post.component.html
+++ b/ArtMediaSite/src/app/post.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="content">
+  <div class="content rounded" style="background-color: #262933; padding: 15px; margin: 15px;">
     <div class="row">
       <div class="col-sm-7">
         <a class="card bg-transparent" [href]="'http://127.0.0.1:8000/' + post.image">
