--- a/ArtMediaSite/src/app/signUp.component.html
+++ b/ArtMediaSite/src/app/signUp.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="content">
+  <div class="content rounded">
     <h3>Enter your details to create an account</h3>
     <form [formGroup] = "signUpForm" (ngSubmit)="onSubmit()">
       <div>
