--- a/ArtMediaSite/src/app/addComment.component.html
+++ b/ArtMediaSite/src/app/addComment.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="content">
+  <div class="content rounded">
     <ng-template #loggedOut>
       <p>Not logged in</p>
     </ng-template>
