--- a/ArtMediaSite/src/app/editUser.component.css
+++ b/ArtMediaSite/src/app/editUser.component.css
@@ -3,14 +3,20 @@
     color: #f3f0f0;
 }
 
+body {
+    background-color: rgb(110, 184, 243);
+    padding-bottom: 3px;
+  }
+
 .content {
-    margin: 3px;
+    background-color: #262933; 
+    padding: 20px; 
+    margin: 18px;
     margin-left: 13.6px;
     margin-right: 13.6px;
-    padding: 5px;
 }
 
 .img {
-    max-width: 16rem; 
-    max-height: 16rem;
+    width: 16rem; 
+    height: 16rem;
   }
