--- a/ArtMediaSite/src/app/post.component.css
+++ b/ArtMediaSite/src/app/post.component.css
@@ -3,6 +3,11 @@
   color: #f3f0f0;
 }
 
+body {
+  background-color: rgb(110, 184, 243);
+  padding-bottom: 3px;
+}
+
 .content {
   margin: 3px;
   margin-left: 13.6px;
