--- a/ArtMediaSite/src/app/user.component.css
+++ b/ArtMediaSite/src/app/user.component.css
@@ -1,12 +1,17 @@
 * {
-  background-color: #262933;
   color: #f3f0f0;
 }
 
+body {
+  background-color: rgb(110, 184, 243);
+  padding-bottom: 3px;
+}
+
 .content {
-  margin: 3px;
+  background-color: #262933; 
+  padding: 20px; 
+  margin: 15px;
   margin-left: 13.6px;
-  padding: 5px;
 }
 
 .row {
