--- a/ArtMediaSite/src/app/user.component.html
+++ b/ArtMediaSite/src/app/user.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="content">
+  <div class="content rounded">
     <div class="row">
       <div class="col-sm-6">
         <div class="card bg-transparent">
