--- a/ArtMediaSite/src/app/post.component.css
+++ b/ArtMediaSite/src/app/post.component.css
@@ -46,6 +46,7 @@ body {
 
 .card-img {
   cursor: pointer;
+  margin-bottom: 5px;
 }
 
 .rounded img-fluid {
@@ -57,4 +58,21 @@ body {
   padding-top: 8px; 
   padding-left: 5px; 
   padding-right: 5px;
+}
+
+.btn {
+  margin-right: 5px;
+}
+
+.likebtn {
+  margin: 0px;
+  padding: 4px;
+  margin-right: 5px;
+}
+
+.likeimg {
+  margin: 0px;
+  padding: 0px;
+  width: 1.8rem; 
+  height: 1.8rem;
 }
