--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -10,7 +10,16 @@
         <h3>Hello {{username}}</h3>
         <br><br><br>
         <div>
-          <button class="btn btn-outline-light" (click) = "onAddPost()">Add New Post</button><br><br>
+          <button class="btn btn-outline-light" (click) = "onAddPost()">Add New Post</button>
+          <div class="form-check">
+            <label class="form-check-label" for="newest">Newest Posts</label>
+            <input class="form-check-input" type="radio" [(ngModel)]="sortOption" (change)="onSortChange()" id="newest" value="newest">
+          </div>
+          <div class="form-check">
+            <label class="form-check-label" for="liked">Popular Posts</label>
+            <input class="form-check-input" type="radio" [(ngModel)]="sortOption" (change)="onSortChange()" id="liked" value="popular">
+          </div>
+          <br><br>
         </div>
         <br><br>
         <p>Newest Posts</p>
