Changed links in cards so that they are keyboard accessible

--- a/ArtMediaSite/src/app/nav.component.html
+++ b/ArtMediaSite/src/app/nav.component.html
@@ -20,7 +20,7 @@
     <div class="form-inline ms-auto" style = "padding-right: 10px">
       <button class="btn btn-outline-secondary" (click) = "loginLogoutButton()">{{buttonName}}</button>
       <button class="btn btn-outline-secondary" *ngIf = "!loggedIn" (click) = "register()" style = "margin-left: 10px">Signup</button>
-      <button class="btn" *ngIf = "loggedIn" (click) = "account()" style = "margin-left: 10px" ><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + profileImagePath" alt="Profile Picture"/></button>
+      <button class="btn btn-outline-secondary rounded-circle btn-sm" *ngIf = "loggedIn" (click) = "account()" style = "margin-left: 10px" ><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + profileImagePath" alt="Profile Picture"/></button>
     </div>
   </div>
 </body>
