--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -1,4 +1,5 @@
 <body style="background-color: rgb(87, 133, 93); background-image: url('assets/Background.gif');">
+  
   <div class="content">
     
   </div>
@@ -9,18 +10,18 @@
       <ng-container *ngIf = "isloggedIn() == true; else loggedOut">
         <h3>Hello {{username}}</h3>
         <br><br><br>
-        <div class="col buttons">
+        <div class="col-sm buttons">
           <button class="btn btn-outline-light" (click) = "onAddPost()">Add New Post</button>
         </div>
       </ng-container>
       <ng-template #loggedOut>
         <p>Login to add your own posts</p>
       </ng-template>
-      <div class="col form-check">
+      <div class="col-sm form-check">
         <label class="form-check-label" for="newest">Newest Posts</label>
         <input class="form-check-input" type="radio" [(ngModel)]="sortOption" (change)="onSortChange()" id="newest" value="Newest">
       </div>
-      <div class="col form-check">
+      <div class="col-sm form-check">
         <label class="form-check-label" for="liked">Popular Posts</label>
         <input class="form-check-input" type="radio" [(ngModel)]="sortOption" (change)="onSortChange()" id="liked" value="Popular">
       </div>
@@ -33,11 +34,11 @@
       <div class="col" *ngFor = "let post of posts">
         <div class="card bg-transparent">
           <div class="card-img-top">
-            <img class="rounded img-fluid" [routerLink] = "['/posts/', post.id]" [src]="'http://127.0.0.1:8000/' + post.image" alt="Uploaded Image"/>
+            <a [routerLink] = "['/posts/', post.id]"><img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Uploaded Image"/></a>
           </div>
           <div class="card-block">
             <h5> {{post.title}} </h5>
-            <h6><img class="profilePic rounded-circle img-fluid" [routerLink] = "['/user/', post.user]" [src]="'http://127.0.0.1:8000/' + postProfilePics[post.user]" alt="Profile Picture"/> {{postUsernames[post.user]}}</h6>
+            <a [routerLink] = "['/user/', post.user]"><h6><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + postProfilePics[post.user]" alt="Profile Picture"/>{{postUsernames[post.user]}}</h6></a>
           </div>
           <br>
         </div>
