--- a/ArtMediaSite/src/app/searchPosts.component.html
+++ b/ArtMediaSite/src/app/searchPosts.component.html
@@ -16,13 +16,13 @@
       </ng-template>
       <div class="row">
         <div class="col" *ngFor = "let post of posts">
-          <div class="card bg-transparent" [routerLink] = "['/posts/', post.id]">
+          <div class="card bg-transparent">
             <div class="card-img-top">
-              <img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+              <a [routerLink] = "['/posts/', post.id]"><img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/></a>
             </div>
             <div class="card-block">
               <h5> {{post.title}} </h5>
-              <h6><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + postProfilePics[post.user]" alt="Profile Picture"/> {{postUsernames[post.user]}}</h6>
+              <a [routerLink] = "['/user/', post.user]"><h6><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + postProfilePics[post.user]" alt="Profile Picture"/>{{postUsernames[post.user]}}</h6></a>
             </div>
           </div>
         </div>
