--- a/ArtMediaSite/src/app/user.component.html
+++ b/ArtMediaSite/src/app/user.component.html
@@ -22,7 +22,7 @@
             <p>Joined {{userProfileDate}}
               <br> {{userProfile.bio}}
             </p>
-            <button class="btn btn-outline-light" (click) = "onFollowUser(userProfile.id)">{{buttonName}}</button>
+            <button *ngIf = "loggedIn()" class="btn btn-outline-light" (click) = "onFollowUser(userProfile.id)">{{buttonName}}</button>
           </ng-template>
         </div>
       </div>
