--- a/ArtMediaSite/src/app/posts.component.css
+++ b/ArtMediaSite/src/app/posts.component.css
@@ -1,11 +1,11 @@
 * {
   background-repeat:no-repeat;
   background-size:100% 100vh;
-  color: #f3f0f0;
 }
 
 body {
   padding-bottom: 10px;
+  color: #f3f0f0;
 }
 
 .content {
@@ -65,4 +65,14 @@ body {
   padding-top: 8px; 
   padding-left: 5px; 
   padding-right: 5px;
+}
+
+.center {
+  text-align: center;
+}
+
+.title {
+  font-family: 'Ink Free', sans-serif;
+  font-size: 150px;
+  color: #33335c;
 }
