--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -1,7 +1,8 @@
 <body style="background-color: rgb(87, 133, 93); background-image: url('assets/Background.gif');">
   
   <div class="content">
-    
+    <br>
+    <h1 class="center title"><b>Art Share</b></h1>
   </div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br>
   <br><br><br><br><br><br><br><br><br><br><br><br><br>
