--- a/ArtMediaSite/src/app/posts.component.css
+++ b/ArtMediaSite/src/app/posts.component.css
@@ -65,6 +65,7 @@ body {
   padding-top: 8px; 
   padding-left: 5px; 
   padding-right: 5px;
+  color: #f3f0f0;
 }
 
 .center {
@@ -75,4 +76,13 @@ body {
   font-family: 'Ink Free', sans-serif;
   font-size: 150px;
   color: #33335c;
+}
+
+.masonry-container {
+    column-count: 5;
+    column-gap: 4px;
+}
+
+.masonry-item img:hover {
+    transform: scale(1.03);
 }
