Added title with gradient

--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -2,10 +2,10 @@
   
   <div class="content">
     <br>
-    <h1 class="center title"><b>Art Share</b></h1>
+    <h1 class="center title gradient"><b>Art Share</b></h1>
   </div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br>
   <div class="content rounded" style="background-color: #262933; margin-right: 15px;">
     <div class="row">
       <ng-container *ngIf = "isloggedIn() == true; else loggedOut">
