--- a/ArtMediaSite/src/app/posts.component.css
+++ b/ArtMediaSite/src/app/posts.component.css
@@ -1,11 +1,11 @@
 * {
   background-repeat:no-repeat;
   background-size:100% 100vh;
+  color: #f3f0f0;
 }
 
 body {
   padding-bottom: 10px;
-  color: #f3f0f0;
 }
 
 .content {
@@ -74,5 +74,10 @@ body {
 .title {
   font-family: 'Ink Free', sans-serif;
   font-size: 150px;
-  color: #33335c;
+}
+
+.gradient {
+  background: linear-gradient(to right, red, purple, blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
